<resources>
    <string name="app_name">QuizApp</string>
    <string name="enterquestion">Enter Question</string>
    <string name="enterchoice">Enter Choices</string>
    <string name="correctanswer">Correct Answer</string>
    <string name="addtest">Add Test</string>
    <string name="setname">Set Name</string>
    <string name="finish">Finish</string>
    <string name="welcome">Welcome To Easy Quiz</string>
    <string name="student">Are You A Student? If yes Click Here</string>
    <string name="or">Else</string>
    <string name="studentportal">Student</string>
    <string name="professorhere">Professor</string>
    <string name="tellusaboutyou">Help Us Know You Better</string>
    <string name="name" translatable="false">Name</string>
    <string name="redid">RedId</string>
    <string name="year">Year</string>
    <string name="major">Major</string>
    <string-array name="year">
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
    </string-array>
    <string-array name="major">
        <item>Accountancy</item>
        <item>Computational Science</item>
        <item>Computer Science</item>
        <item>Economics</item>
        <item>English</item>
        <item>Music</item>
    </string-array>
    <string-array name="profileselector">
        <item>Students</item>
        <item>Professor</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="easyquiz">EASY QUIZ</string>
    <string name="infohere">EASY QUIZ</string>
    <string name="addClass">Add Class</string>
    <string name="welcomeprofessor">Welcome</string>
    <string name="instructorid">Instructor Id</string>
    <string name="title_activity_professor_options_nav">ProfessorOptionsActivityNav</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Log Out</string>
    <string name="addclass">ADD CLASS</string>
    <string name="classname">Class Name</string>
    <string name="dateclassmade">Class Created On:</string>
    <string name="testname">Test Name</string>
    <string name="datecreated">Date Created</string>
    <string name="datescheduled">mm/dd/yyyy</string>
    <string name="testnamehere">Type Test Name Here</string>
    <string name="addtoclass">Class</string>
    <string name="hello">About</string>
    <string name="instructions">Instructions</string>
    <string name="instructionsdetails">Click on the Navigator to view options. Click the navigator options to view information. Press Logout to exit on the right hand corner of the screen.</string>
    <string name="nomember">Not A Member Yet?</string>
    <string name="register">Register</string>
    <string name="nextQuestion">Next Question</string>
    <string name="professorLogin">Professor Login</string>
    <string name="studentLogin">Student Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="helpusknow">Help Us Know You Better</string>
    <string name="orgoto">OR</string>
    <string name="dateScheduledText">Date Scheduled</string>
    <string name="addToClass">Request to be added to selected class</string>
    <string name="submitQuestion">Submit Question</string>
    <string name="scoreDashboard">Score Dashboard</string>
    <string name="currentTestScore">Current Test Score</string>
    <string name="backToTests">Back to tests</string>
    <string name="studentRegisterName">Name</string>
    <string name="studentRegisterRedId">RedId</string>
    <string name="studentRegisterEmail">Email</string>
    <string name="studentRegisterPassword">Password</string>
    <string name="studentRegisterButton">Register</string>
    <string name="studentLoginButton">Login</string>
    <string name="instructionsForStudents">Instructions</string>
    <string name="testInstructions">Please read the instructions carefully before answering the questions. The test contains multiple choice questions with a timer of 15 minutes on the entire test. You can change your answer any number of times before submitting the test. All the best!</string>
    <string name="beginTest">Begin Test</string>
    <string name="timer">Timer</string>
    <string name="submitAnswers">Submit Answers</string>
    <string name="studentPortal">Student Portal</string>
    <string name="professorPortal">Professor Portal</string>
    <string name="addClassButton">Request to be added to selected class</string>
    <string name="professorEmailLogin">Email</string>
    <string name="professorPasswordLogin">Password</string>
    <string name="professorLoginButton">LOGIN</string>
    <string name="professorRegisterName">Name</string>
    <string name="professorInstructirRegister">Instructor Id</string>
    <string name="professorRegisterEmail">Email</string>
    <string name="professorRegisterPassword">Password</string>
    <string name="professorRegisterButtonValue">Register</string>
    <string name="professorRegisterLoginValue">Login</string>
    <string name="instructorId">id</string>
    <string name="studentRedId">RedID</string>
    <string name="selectATest">Select a test</string>
    <string name="selectAClass">Select a class</string>
    <string name="addClassMenu">Add Class</string>
    <string name="addTestMenu">Add Test</string>
    <string name="addStudentToClass">Add Student To Class</string>
    <string name="viewScores">View Scores</string>
    <string name="homeMenu">Home</string>
    <string name="enrollToAClass">Enroll to a class</string>
    <string name="enrollStatus">Enroll Status</string>
    <string name="scheduledTests">Scheduled Tests</string>
    <string name="testsTaken">Tests Taken</string>
    <string name="homeMenuStudents">Home</string>
</resources>
